# gcp-aegis-ai

./: .gitignore  AGENTS.md  README.md
aegis-hub-code/: deploy.sh
aegis-hub-code/incident-analyzer/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
aegis-hub-code/incident-analyzer/app/: config.py  main.py
aegis-hub-code/incident-analyzer/app/integrations/: bigquery_incidents.py  firestore_sessions.py  slack_gateway_client.py  vertex.py
aegis-hub-code/incident-analyzer/app/routes/: health.py  pubsub.py
aegis-hub-code/incident-analyzer/tests/: test_vertex.py
aegis-hub-code/query-processor/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
aegis-hub-code/query-processor/app/: config.py  main.py
aegis-hub-code/query-processor/app/integrations/: bigquery_incidents.py  firestore_sessions.py  metric_catalog.py  metric_plan.py  monitoring.py  vertex.py
aegis-hub-code/query-processor/app/routes/: health.py  incidents.py
aegis-hub-code/query-processor/tests/: test_metric_plan.py
aegis-hub-code/slack-gateway/: .env.example  README.md  main.py  pyproject.toml
aegis-hub-code/slack-gateway/app/: background.py  config.py  main.py  security.py  slack_event_dedup.py
aegis-hub-code/slack-gateway/app/integrations/: firestore_dedup.py  query_processor_client.py  slack_web_api.py
aegis-hub-code/slack-gateway/app/routes/: internal_alerts.py  slack_commands.py  slack_events.py
client-backend/: .env.example  README.md  aegis-demo.yaml  docker-compose.yaml
client-backend/apps/python-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
client-backend/apps/python-api/app/: __init__.py  chaos_auto.py  config.py  context.py  errors.py  java_client.py  logging_config.py  main.py  middleware.py  observability.py  schemas.py
client-backend/apps/python-api/app/routers/: __init__.py  chaos.py  health.py  info.py  workload.py
client-backend/apps/python-api/tests/: test_app.py
client-backend/docs/: architecture.md  milestone-1-plan.md
client-backend/k8s/: aegis-demo.yaml  configmap.yaml  java-api.yaml  kustomization.yaml  namespace.yaml  python-api.yaml
client-backend/scripts/: demo-checkout-latency.sh  demo-pricing-unavailable.sh  demo-reset-failures.sh  deploy-gke.sh  run-local.sh  smoke-gke.sh  smoke-local.sh  test-local.sh
docs/: client-incident-management.md  client-workload-deployment.md  incident-analyzer-spec.md  live-demo-operations.md  project-status-2026-05-31.md  query-processor-spec.md  slack-gateway-spec.md
presentation/: README.md  index.html  index.qmd  theme.scss
terraform/aegis-hub/: artifact-registry.tf  bigquery.tf  budget.tf  (+9 more)
tests/: conftest.py  helpers.py  pyproject.toml
tests/incident_analyzer/: conftest.py  test_pubsub.py
tests/query_processor/: conftest.py  test_bigquery_incidents.py  test_incidents.py  test_metric_plan.py  test_metric_probe.py
tests/slack_gateway/: conftest.py  test_alerts.py  test_commands.py  test_events.py
(+46 files in other folders)
