[project]
name = "incident-analyzer"
version = "0.1.0"
description = "Aegis Incident Analyzer — processes Cloud Logging errors via Pub/Sub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-firestore>=2.27.0",
    "google-cloud-pubsub>=2.38.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.47.0",
    "vertexai>=1.71.1",
]
