[project]
name = "slack-gateway"
version = "0.1.0"
description = "Aegis Slack Gateway — thin relay between Slack and internal Hub services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.47.0",
]
